@@ -527,3 +527,15 @@ CREATE TABLE test_schema.issue_identity_default_test (
     id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
     data TEXT
 );
+
+-- Partitioned table test
+CREATE TABLE data.partition_test (
+    id bigserial NOT NULL,
+    flow_id varchar(255) NOT NULL,
+    CONSTRAINT partition_test_pkey PRIMARY KEY (id, flow_id)
+)
+PARTITION BY LIST (flow_id);
+
+CREATE TABLE data.partition_test_default
+    PARTITION OF data.partition_test
+    DEFAULT;
